[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MusicController.gd" type="Script" id=1]

[node name="MusicController" type="Node"]
script = ExtResource( 1 )

[node name="ambience" type="Node" parent="."]

[node name="residental" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="construction" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="arboretum" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="sewers" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="market" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="genorator" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="offices" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="hospital" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="server_room" type="AudioStreamPlayer" parent="ambience"]
volume_db = -80.0
autoplay = true
bus = "Ambience"

[node name="motifs" type="Node" parent="."]

[node name="day_start" type="AudioStreamPlayer" parent="motifs"]
volume_db = -80.0
bus = "Motifs"

[node name="new_area" type="AudioStreamPlayer" parent="motifs"]
volume_db = -80.0
bus = "Motifs"

[node name="friend" type="AudioStreamPlayer" parent="motifs"]
volume_db = -80.0
bus = "Motifs"
